# vhde

./: .gitignore  .travis.yml  01_moving_rectangles_by_dragging.cpp  02_dragging_port_on_component.cpp  CMakeLists.txt  Makefile  README.md  antlr4-cpp-runtime-4.7-only-build-shared.patch  build.sh  clutter.txt  clutter_block.cpp  clutter_block.h  clutter_port.cpp  clutter_port.h  clutter_scaling_text.cpp  clutter_scaling_text.h  clutter_wire.cpp  clutter_wire.h  common.h  gui_block.cpp  gui_block.h  gui_common.h  gui_component.cpp  gui_component.h  gui_instance.cpp  gui_instance.h  gui_port.cpp  gui_port.h  gui_signal.cpp  gui_signal.h  i_named_item.h  install-clutter-gtk.sh  install-clutter-gtkmm.sh  install-cluttermm.sh  install-from-github.sh  install-mm-common.sh  layout_block.cpp  layout_block.h  layout_component.cpp  layout_component.h  (+33 more)
docs/: backlog.md  randomthoughts.md
docs/design/: class_diagram__model_classes.dia  class_diagram__model_view_adapter.dia  design.txt  focus_handling.md  selection_and_manipulation.md  sequence_createport.dia  sequence_removeport.dia
docs/wire_router/: Orderded wire routing.ipynb  README.md  requirements.txt  wire_rounting.ipynb  wire_routing.ipynb
glade/: window.glade
src/: architecture_stage_updater.cpp  architecture_stage_updater.h  entity_stage_updater.cpp  entity_stage_updater.h  i_stage_updater.h  i_treeview_updater.h  main.cpp  move_and_resize_handler.cpp  move_and_resize_handler.h  project.cpp  project.h  project_treeview_updater.cpp  project_treeview_updater.h  vhde_application.cpp  vhde_application.h  vhde_window.cpp  vhde_window.h
src/clutter/: clutter_block.cpp  clutter_block.h  clutter_port.cpp  clutter_port.h  clutter_scaling_text.cpp  clutter_scaling_text.h  clutter_wire.cpp  clutter_wire.h
src/common/: common.h
src/gui/: gui_block.cpp  gui_block.h  gui_component.cpp  gui_component.h  gui_draggable.h  gui_instance.cpp  gui_instance.h  gui_port.cpp  gui_port.h  gui_selectable.h  gui_selection.cpp  gui_selection.h  gui_signal.cpp  gui_signal.h
src/layout/: layout_architecture.cpp  layout_architecture.h  layout_block.cpp  layout_block.h  layout_component.cpp  layout_component.h  layout_file.cpp  layout_file.h  layout_instance.cpp  layout_instance.h  layout_port.cpp  layout_port.h  layout_signal.cpp  layout_signal.h  layout_types.h
src/parser/: parser.cpp  parser.h
src/parser/grammar/: makeparser.sh  vhdl.g4
src/parsers/: parse_layout.cpp  parse_layout.h  parse_vhdl.cpp  parse_vhdl.h
src/parsers/grammar/: vhdl.g4
src/vhdl/: vhdl_architecture.cpp  vhdl_architecture.h  vhdl_component.cpp  vhdl_component.h  vhdl_entity.cpp  vhdl_entity.h  vhdl_file.cpp  vhdl_file.h  vhdl_fragment.cpp  vhdl_fragment.h  vhdl_instance.cpp  vhdl_instance.h  vhdl_interface.cpp  vhdl_interface.h  vhdl_port.cpp  vhdl_port.h  vhdl_signal.cpp  vhdl_signal.h  vhdl_type.cpp  vhdl_type.h
test/: .gitignore  exampleproject.vhde  top_entity.layout  top_entity.vhd  used_entity.layout  used_entity.vhd
